--- a/AirQualityDashboard/Views/Shared/_Layout.cshtml
+++ b/AirQualityDashboard/Views/Shared/_Layout.cshtml
@@ -30,9 +30,10 @@
                 <h4 class="mb-4">Admin Dashboard</h4>
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
-                        <a href="@Url.Action("Index", "Home")" class="nav-link text-white">
+                        <a href="@Url.Action("Index", "Dashboard", new { area = "MonitoringAdmin" })" class="nav-link text-white">
                             <i class="bi bi-house-door"></i> Dashboard
                         </a>
+
                     </li>
                     <li class="nav-item">
                         <a href="@Url.Action("Index", "Sensors" , new { area = "MonitoringAdmin" })" class="nav-link text-white">
@@ -50,7 +51,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="@Url.Action("SystemStatus", "Admin")" class="nav-link text-white">
+                        <a href="@Url.Action("Index", "Home")" class="nav-link text-white">
                             <i class="bi bi-bar-chart"></i> System Status
                         </a>
                     </li>
