--- a/AirQualityDashboard/Views/Shared/_Layout.cshtml
+++ b/AirQualityDashboard/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 <h4 class="mb-4">Admin Dashboard</h4>
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
-                        <a href="@Url.Action("Index", "Home")" class="nav-link text-white">
+                        <a href="@Url.Action("Dashboard", "MonitoringAdmin")" class="nav-link text-white">
                             <i class="bi bi-house-door"></i> Dashboard
                         </a>
                     </li>
